# Paraphrase

./: .gitignore  README.md  paraphrase.py  pyproject.toml  requirements.txt
